@@ -23,3 +23,4 @@
 * equation of time
 0.5
 * revised internationalization
+* diagram of visibility of heavenly bodies
